created a static route for serving up compiled unity clients
