# config/openapi.yml
@@ -36,6 +36,31 @@ tags:
     description: Urls for testing api and sockets
 
 paths:
+  /client:
+    get:
+      summary: Download client files
+      description: Static files
+      servers:
+        - url: /
+      security: []
+      tags:
+        - static
+      operationId: clientFiles
+      responses:
+        200:
+          description: Success
+          content:
+            text/html:
+              schema:
+                type: string
+        404:
+          description: Not found
+        500:
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FailResponse'
   /:
     get:
       summary: Socket testing
