# src/api/controllers/index.ts
@@ -4,3 +4,4 @@ export * from './game'
 export * from './character'
 export * from './battle'
 export * from './test'
+export * from './static'
